samples/_failures_safe/1761291227_c0f19f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c88b53e.c: In function ‘main’:
./samples/SAFE/__tmp_6c88b53e.c:164:13: error: expected ‘:’ or ‘...’ at end of input
  164 |             case 1
      |             ^~~~
./samples/SAFE/__tmp_6c88b53e.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c88b53e.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c88b53e.c:164:13: error: expected declaration or statement at end of input
